feat: add sync account logics, fix faspay, prettier
